--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-jobs {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,4 +27,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.List {
+  /* border: 1px solid #d9dddd; */
+  margin-top: 16px;
+}
+
+.ListItemEven,
+.ListItemOdd {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ListItemEven {
+  background-color: #ffffff;
 }
