--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+* {
+ box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
@@ -8,7 +11,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  width: 615px;
+  width: 655px;
   margin-left: auto;
   margin-right: auto;
   background: #fff;
@@ -41,3 +44,4 @@
 .ListItemEven {
   background-color: #ffffff;
 }
+
